[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/MenuController.gd" type="Script" id=1]
[ext_resource path="res://sprites/menu/title.png" type="Texture" id=2]
[ext_resource path="res://sprites/menu/play.png" type="Texture" id=3]
[ext_resource path="res://sprites/menu/credits.png" type="Texture" id=4]
[ext_resource path="res://sprites/menu/quit.png" type="Texture" id=5]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 964.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 91.0
texture = ExtResource( 2 )

[node name="PlayBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 964.0
margin_bottom = 165.0
texture_normal = ExtResource( 3 )

[node name="CreditsBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 169.0
margin_right = 964.0
margin_bottom = 242.0
texture_normal = ExtResource( 4 )

[node name="QuitBtn" type="TextureButton" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 964.0
margin_bottom = 316.0
texture_normal = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/PlayBtn" to="VBoxContainer" method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsBtn" to="VBoxContainer" method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="VBoxContainer" method="_on_QuitBtn_pressed"]
